# itgrate

./: Cargo.toml
benches/: bench.rs
src/: chart.rs  lib.rs  main.rs  note.rs  note_pos.rs  optimize.rs  rate.rs  smparser.rs  train.rs
src/rate/: mod.rs  state.rs
tests/: basic.rs  chart_comparisons.rs  common.rs
