[package]
name = "itgrate"
version = "0.1.0"
edition = "2018"

[lib]

[[bin]]
name = "itgrate"
test = false

[dependencies]
anyhow = "1.0"
daggy = { version = "0.7", features = ["stable_dag"] }
gnuplot = "*"
noisy_float = "0.1"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
